tweak to visual design. game speed

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="css/style.css" media="all" />
+    <link href='http://fonts.googleapis.com/css?family=Parisienne' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Sigmar+One' rel='stylesheet' type='text/css'>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 </head>
 <body>
@@ -23,9 +25,11 @@
 <div class="container">
 	<div class="row top-buffer" id="header">
 		<div class="col-xs-12 col-sm-10 col-sm-offset-1 transparent-background padded">
-			<h2 class="fancy-header">George Osborne Presents</h2>
-			<h1>Frack a Mole</h1>
-			<p>Public protests against fracking are popping up all over the UK. Can you help George Osborne beat them back so that he can stay in favour with his wealthy buddies at Cuadrilla - the firm leading the way in UK fracking development?</p>
+            <div class="header-box">
+    			<h2 class="fancy-sub-header">George Osborne presents...</h2>
+    			<h1 class="fancy-header">Frack a Mole</h1>
+            </div>
+			<p class="text-center">Public protests against fracking are popping up all over the UK. Can you help George Osborne beat them back so that he can stay in favour with his wealthy buddies at Cuadrilla - the firm leading the way in UK fracking development?</p>
 		</div>
 	</div>
 	</div>
