--- a/frack-a-mole.html
+++ b/frack-a-mole.html
@@ -28,7 +28,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12 col-sm-8 col-sm-offset-2">
-				<div id="map">
+				<div id="map" class="center-block">
 				<!-- <img id='map'src='../images/UKFrackingMapwithHoles.png'> -->
 					<h2 class="pull-left">
 						Score: <strong id="score">0</strong>&nbsp;points
@@ -42,7 +42,7 @@
 						  </div>
 						</div>
 					</div>
-				<!-- </div> -->
+				</div>
 				
 			</div>
 		</div>
