--- a/thanks.html
+++ b/thanks.html
@@ -16,6 +16,9 @@
 									<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" media="all" />
 									<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css" media="all" />
 									<link rel="stylesheet" type="text/css" href="css/style.css" media="all" />
+									
+    <link href='http://fonts.googleapis.com/css?family=Parisienne' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Sigmar+One' rel='stylesheet' type='text/css'>
 									<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 									<script src="js/bootstrap.min.js"></script>
 								</head>
