Facebook meta tags, sharing and mailchimp added back in

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 	<TITLE>Frack-a-Mole: Squash dissent while maximising profits!</TITLE>
 <META NAME="Title" CONTENT="Frack-a-Mole: Squash dissent while maximising profits!">
 <META NAME="Author" CONTENT="HackChange">
-<META NAME="Description" CONTENT="Time to squash local protests and ignore environmental concerns, while generating profits for your cronies - time for Frack-A-Mole!">
+<META NAME="Description" CONTENT="I crushed some pesky fracking protestors but couldn't defeat the weight of public pressure in the end. Can you frack where I failed?">
 <META NAME="Keywords" CONTENT="fracking, frack, UK, protest, climate change, George Osborne, Cuadrilla">
 <META HTTP-EQUIV="Content-Language" CONTENT="en">
 <META HTTP-EQUIV="Creation-Date" CONTENT="30-01-2015">
 <META HTTP-EQUIV="Version" CONTENT="0.1">
-<META HTTP-EQUIV="Page URL" CONTENT="www.frack-a-mole.co.uk">
+<META HTTP-EQUIV="Page URL" CONTENT="http://www.frack-a-mole.co.uk">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" media="all" />
@@ -21,13 +21,21 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 </head>
 <body>
-
+<div class="transparent-background" style="text-align: right;">
+    <div class="inline">
+        <p class="inline">Get more stuff like this:</p>
+        <form action="https://frack-a-mole.us9.list-manage.com/subscribe/post?u=57081c2f6910fe274c2299c39&amp;id=12d952b4ee" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate inline" target="_blank" novalidate>
+            <input type="email" name="EMAIL" placeholder="abc@example.com">
+            <button type="submit" class="btn btn-primary">Sign me up</button>
+        </form>
+    </div>
+</div>
 <div class="container">
 	<div class="row top-buffer" id="header">
 		<div class="col-xs-12 col-sm-10 col-sm-offset-1 transparent-background padded">
             <div class="header-box">
     			<h2 class="fancy-sub-header">George Osborne presents...</h2>
-    			<h1 class="fancy-header">Frack a Mole</h1>
+    			<h1 class="fancy-header">Frack-a-Mole</h1>
             </div>
 			<p class="text-center">Public protests against fracking are popping up all over the UK. Can you help George Osborne beat them back so that he can stay in favour with his wealthy buddies at Cuadrilla - the firm leading the way in UK fracking development?</p>
 		</div>
