--- a/thanks.html
+++ b/thanks.html
@@ -16,39 +16,36 @@
 									<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" media="all" />
 									<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css" media="all" />
 									<link rel="stylesheet" type="text/css" href="css/style.css" media="all" />
-									
+
     <link href='http://fonts.googleapis.com/css?family=Parisienne' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Sigmar+One' rel='stylesheet' type='text/css'>
 									<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 									<script src="js/bootstrap.min.js"></script>
 								</head>
-								<body>
-									<div class="container">
-<!-- 		<div class="row" id="top-bar">
-			<div class="col-xs-12" style="text-align: right;">
-				<div class="inline">
-					<p class="inline">Get more stuff like this:</p>
-					<form class="inline">
-						<input type="text" placeholder="abc@example.com">
-						<button type="submit">Sign me up</button>
-					</form>
-				</div>
-			</div>
-		</div> -->
+<body>
+								
+	<div class="transparent-background" style="text-align: right;">
+		<div class="inline">
+			<p class="inline">Get more stuff like this:</p>
+			<form action="https://frack-a-mole.us9.list-manage.com/subscribe/post?u=57081c2f6910fe274c2299c39&amp;id=12d952b4ee" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate inline" target="_blank" novalidate>
+				<input type="email" name="EMAIL" placeholder="abc@example.com">
+				<button type="submit" class="btn btn-primary">Sign me up</button>
+			</form>
+		</div>
+	</div>
+	<div class="container">
 		<div class="row">
 			<div class="col-xs-12 col-sm-8">
 				<div class="transparent-background padded top-buffer">
 					<div class="col-xs-12 play-button">
 						<a href="frack-a-mole" class="btn btn-success" style="font-size: 150%;">PLAY AGAIN</a>
 						<h4 class="top-buffer">Share Frack-a-mole!<br><br>
-							<a href="https://twitter.com/home?status=Can%20you%20%23frack%20where%20%40george_osborne%20has%20failed?%20www.frack-a-mole.co.uk%20" alt="Share Frack-a-Mole on Twitter"><img src="images/Twitter.png"></a>
-							<a href="http://hrefshare.com/9a9e7" alt="Share Frack-a-mole on Facebook"><img src="images/Facebook.png"></a>
+							<a href="https://twitter.com/home?status=Score%20points%20helping%20%40george_osborne%20squash%20protest%20against%20%23fracking%20in%20our%20new%20game%20Frack-A-Mole%20http://www.frack-a-mole.co.uk" alt="Share Frack-a-Mole on Twitter"><img src="images/Twitter.png"></a>
+							<a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fwww.frack-a-mole.co.uk" alt="Share Frack-a-mole on Facebook"><img src="images/Facebook.png"></a>
 						</h4>
 					</div>
 					<h2 class="fancy-header">Bad luck George!</h2>
-					<h4>You crushed a lot of pesky protests, which wins you a 
-						top table seat at Cuadrilla’s next society ball, but sadly isn’t 
-						enough to overcome:</h4>
+					<h4>You may have crushed a few pesky protestors for your buddies Cuadrilla but you in the end you couldn't overcome:</h4>
 						<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 							<div class="panel panel-default">
 								<div class="panel-heading" role="tab" id="headingOne">
