--- a/thanks.html
+++ b/thanks.html
@@ -45,7 +45,7 @@
 						</h4>
 					</div>
 					<h2 class="fancy-header">Bad luck George!</h2>
-					<h4>You may have crushed a few pesky protestors for your buddies Cuadrilla but you in the end you couldn't overcome:</h4>
+					<h4>You may have crushed a few pesky protestors for your buddies Cuadrilla but in the end you couldn't overcome:</h4>
 						<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 							<div class="panel panel-default">
 								<div class="panel-heading" role="tab" id="headingOne">
