SEcond fbshare image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <META HTTP-EQUIV="Page URL" CONTENT="http://www.frack-a-mole.co.uk">
 <meta property="og:title" content="Frack-a-Mole: Squash dissent while maximising profits!"/>
 <meta property="og:description" content="I crushed some pesky fracking protestors but couldn't defeat the weight of public pressure in the end. Can you frack where I failed?"/>
-<META property="og:image" CONTENT="http://www.frack-a-mole.co.uk/images/fbshare.png">
+<META property="og:image" CONTENT="http://www.frack-a-mole.co.uk/images/fbshare2.png">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" media="all" />
