--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
     			<h2 class="fancy-sub-header">George Osborne presents...</h2>
     			<h1 class="fancy-header">Frack-a-Mole</h1>
             </div>
-			<p class="text-center">Public protests against fracking are popping up all over the UK. Can you help George Osborne beat them back so that he can stay in favour with his wealthy buddies at Cuadrilla - the firm leading the way in UK fracking development?</p>
+			<p class="text-center">Public protests against fracking are popping up all over the UK.<br />
+                Can you help George Osborne beat them back so that he can stay in favour with his wealthy buddies at Cuadrilla - the firm leading the way in UK fracking development?</p>
 		</div>
 	</div>
 	</div>
