--- a/thanks.html
+++ b/thanks.html
@@ -60,7 +60,7 @@
 										<ul>
 											<li>A <a href="http://www.theguardian.com/environment/2015/jan/21/campaigners-urge-cameron-reconsider-his-stance-fracking" alt="Guardian - Petition on fracking">quarter of a million people signed</a> a petition against fracking, George. Smells worryingly like democracy.</li>
 											<li><a href="http://www.businessgreen.com/bg/news/2372481/government-allows-free-fracking-rights-despite-99-per-cent-opposition" alt="99% Opposition to fracking in consultation">99% of respondents</a> to a Government consultation opposed changes to the trespass law to allow drilling under people’s homes. Democr… oh what’s the point.</li>
-											<li>Just <a href="http://www.usurv.com/CFRiRAAAR" alt="Survey of fracking support">25% of people</a> say they support fracking (25% isn’t a majority, George - you’re supposed to be a numbers man!) and only 10% when it’s proposed near their homes </li>
+											<li>Just <a href="http://www.usurv.com/CFRiRAAAR" alt="Survey of fracking support">25% of people</a> say they support fracking (25% isn’t a majority, George - you’re supposed to be a numbers man!) and only 10% when it’s proposed near their homes.</li>
 											<li>Three times as many people say they'd prefer to live near a wind farm than a fracking rig. Rather makes a mockery of all your anti-wind huffing and puffing, eh?</li>
 											<li>Know when you’re beaten, George. You’ll never defeat the amazing <a href="https://witness.theguardian.com/assignment/53ecae88e4b038fb92169a38/1110857" alt="Anti-fracking grannies from Lancashire">group of Lancashire grandmothers</a> standing up to your frackhead buddies.</li>
 											<li><a href="http://www.ft.com/cms/s/0/b19a1d56-a6ea-11e4-8a71-00144feab7de.html" alt="Scotland has blocked fracking">Scotland has blocked fracking</a>, Wales says it might. Germany, France and the Netherlands all have bans and even <a href="http://www.theguardian.com/environment/2014/nov/05/birthplace-fracking-boom-votes-ban-denton-texas" alt="Texas changes its mind on fracking">Denton, Texas, the birthplace of fracking, has changed it’s mind</a>. You’re fracking the wrong horse, George. Giddy-up!</li>
@@ -115,7 +115,7 @@
 							<div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
 								<div class="panel-body">
 									<ul>
-										<li>People want real jobs George, lots of them. <a href="http://www.foe.co.uk/resource/press_releases/doubts-over-fracking-jobs-claims-new-report-says-24000-jobs-clean-energy" alt="Insulating homes creates jobs">Insulating homes in the North West could create nearly 10 000 jobs in 5 years</a>, for instance. Whereas your bluds at Cuadrilla say the 6-year fracking project proposed in Lancashire would muster up just 11 jobs per site. I know you like the number 11, George, but come on.</li>
+										<li>People want real jobs George, lots of them. <a href="http://www.foe.co.uk/resource/press_releases/doubts-over-fracking-jobs-claims-new-report-says-24000-jobs-clean-energy" alt="Insulating homes creates jobs">Insulating homes in the North West could create nearly 10 000 jobs in 5 years</a>, for instance. Whereas your buds at Cuadrilla say the 6-year fracking project proposed in Lancashire would muster up just 11 jobs per site. I know you like the number 11, George, but come on.</li>
 									</ul>
 								</div>
 							</div>
