--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <META HTTP-EQUIV="Content-Language" CONTENT="en">
 <META HTTP-EQUIV="Creation-Date" CONTENT="30-01-2015">
 <META HTTP-EQUIV="Version" CONTENT="0.1">
-<META HTTP-EQUIV="Page URL" CONTENT="http://www.frack-a-mole.co.uk">
-<meta property="og:url" content="http://www.frack-a-mole.co.uk" />
+<META HTTP-EQUIV="Page URL" CONTENT="http://frack-a-mole.co.uk">
+<meta property="og:url" content="http://frack-a-mole.co.uk" />
 <meta property="og:title" content="Frack-a-Mole: Squash dissent while maximising profits!"/>
 <meta property="og:description" content="I crushed some pesky fracking protestors but couldn't defeat the weight of public pressure in the end. Can you frack where I failed?"/>
 <META property="og:image" CONTENT="http://www.frack-a-mole.co.uk/images/fbshare2.png">
