Changed twitter share message

--- a/thanks.html
+++ b/thanks.html
@@ -40,7 +40,7 @@
 					<div class="col-xs-12 play-button">
 						<a href="frack-a-mole" class="btn btn-success" style="font-size: 150%;">PLAY AGAIN</a>
 						<h4 class="top-buffer">Share Frack-a-mole!<br><br>
-							<a href="https://twitter.com/home?status=Score%20points%20helping%20%40george_osborne%20squash%20protest%20against%20%23fracking%20in%20our%20new%20game%20Frack-A-Mole%20http://www.frack-a-mole.co.uk" alt="Share Frack-a-Mole on Twitter"><img src="images/Twitter.png"></a>
+							<a href="https://twitter.com/home?status=Play%20Frack-A-Mole%20and%20score%20points%20by%20helping%20%40george_osborne%20squash%20protests%20against%20%23fracking%20www.frack-a-mole.co.uk"><img src="images/Twitter.png"></a>
 							<a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fwww.frack-a-mole.co.uk" alt="Share Frack-a-mole on Facebook"><img src="images/Facebook.png"></a>
 						</h4>
 					</div>
